feat: impl reserva sequencial e visualização de tela unificada.